fixed spacing issue with side content

--- a/src/components/styles/SideContent.css
+++ b/src/components/styles/SideContent.css
@@ -49,6 +49,11 @@
    height: var(--section-height);
 }
 
+#links {
+   margin-top: 20vh;
+   margin-bottom: 10vh;
+}
+
 .sections a {
    text-decoration: none;
    color: yellow;
